--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
           <div class="container">
             <!-- logo -->
             <div class="nav-logo">
-              <li class="nav-logo-text"><%= link_to products_path do %><span class="glyphicon glyphicon-cd logo-icon"></span>DIG<span id="r">R</span>U<% end %></li>
+              <li class="nav-logo-text"><%= link_to products_path do %><span class="glyphicon glyphicon-cd logo-icon"></span><span id="dig">DIG</span><span id="r">R</span><span id="dig">U</span><% end %></li>
             </div>
             <!-- /logo -->
 
