--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,5 @@
-<%= render "form" %>
+<p>出品フォーム</p>
+<%= current_artist.name %>
+<%= form_for(@product, :url => {:action => 'create'}) do |f| %>
+	<%= render partial: "form", locals: {f: f } %>
+<% end %>
