--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -76,10 +76,14 @@
 			<div class="border"><span class="glyphicon glyphicon-comment"> コメント</span></div>
 			<div class="comment">
 				    <% @product.comments.each do |comment| %>
+				    	<% if comment.user.hundle_name.nil? %>
+				    	<p>名前：名無しのユーザー
+				    	<% else %>
 				    	<p>名前：<%= comment.user.hundle_name %>
-				    	 / 投稿日時：<%= comment.created_at.strftime('%Y/%m/%d') %><p>
+				    	<% end %>
+				    	 / 投稿日時：<%= comment.created_at.strftime('%Y/%m/%d') %></p>
 					    <p>コメント：<%= comment.comment_text %>
-				         <%= link_to "削除", product_comments_path(@product.id), method: :delete %><p>
+				         <%= link_to "削除", product_comments_path(@product.id), method: :delete %></p>
 				    <% end %>
 			</div>
 			<!-- 商品へのコメント -->
