--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,12 +33,12 @@
 					<% if user_signed_in? %>
 						<% if !@product.favorited_by?(current_user) %>
 						    <%= link_to product_favorites_path(@product), method: :post do %>
-		    	 				<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+		    	 				<i class="fas fa-heart fa-fw" style="color: #FF0040;"></i>
 		    	 			 	お気に入りに入れる
 		 					<% end %>
 						<% else %>
 						    <%= link_to product_favorites_path(@product), method: :delete do %>
-					    		<i class="fa fa-heart-o"" aria-hidden="true"></i>
+					    		<i class="fas fa-heart"" aria-hidden="true" style="color: #5858FA;"></i>
 					    	  	お気に入りから外す
 						    <% end %>
 						<% end %>
@@ -70,6 +70,7 @@
 						<% end %>
 				<% end %>
 			</div>
+            <br>
 			<!-- 商品の詳細情報 -->
 
 			<!-- 商品へのコメント -->
@@ -85,6 +86,7 @@
 			<!-- 商品へのコメント -->
 			<!-- コメント投稿用フォーム -->
             <% if user_signed_in? %>
+            <br>
 			<%= form_for [@product, @comment] do |f| %>
 	            <%= f.text_area :comment_text, rows:'5', class: "form-control", placeholder: "コメントをここに" %>
 	    		<%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
