--- a/app/views/users/confirm_order.html.erb
+++ b/app/views/users/confirm_order.html.erb
@@ -1,5 +1,3 @@
-<h1>Users#Address</h1>
-
 購入内容確認
 
 <div class="container">
@@ -44,6 +42,7 @@
 	        	<p class= "clearfix"><%= f.submit "購入を確定する", class: "col-xs-8 btn btn-lg btn-danger" %></p>
 		    <!-- 配送先が指定されていない場合（新規ユーザ） -->
 		    <% else %>
+		    	<div class="clearfix"></div>
 		       	<p class= "please-add-address"> ※ 配送先を指定してください </p>
 	        <% end %>
 		        <% end %>
