--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -216,6 +216,7 @@
 .product-information-text {
 	float: left;
 	padding-left: 30px;
+	width: 60%;
 }
 
 .product-show-movie {
@@ -241,3 +242,9 @@
 	background-color: orange;
 }
 
+.product-sidebar-sold-out {
+	list-style: none;
+	text-align: center;
+	font-size: 20px;
+	padding-top: 30px;
+}
