--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
 
               <ul class="nav-menu nav navbar-nav artist">
                 <% if current_user.carts.all.last && current_user.carts.all.last.added_at == nil %>
-                  <li><%= link_to cart_path(current_user.carts.all.last), class:"cat-5" do %><p class="glyphicon glyphicon-shopping-cart header-icon"></p><p>カート</p><% end %></li>
+                  <li><%= link_to cart_path(current_user.carts.all.last), class:"cat-5" do %><p class="glyphicon glyphicon-shopping-cart header-icon"></p> カート<% end %></li>
                 <% else%>
                   <li><%= link_to carts_empty_path, class:"cat-5" do %><p class="glyphicon glyphicon-shopping-cart header-icon"></p> カート<% end %></li>
                 <% end %>
