product layout update

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,7 +12,7 @@
   <h4> シングル/アルバム名</h4>
   <%= f.text_field :name, class: "" %>
 
-  <div id="disc" style="border: 2px solid #00F;">
+  <div id="disc" >
     <%= f.fields_for :disc_numbers do |df| %>
 
     <h4> 枚数</h4>
