--- a/app/views/products/_disc_number_fields.html.erb
+++ b/app/views/products/_disc_number_fields.html.erb
@@ -1,9 +1,11 @@
-<div class="nested-fields" id="music" style="border: 2px solid #0F0;" >
+<div class="nested-fields" id="music" >
 	<%= f.text_field :disc_name, class: "" %>
     	<%= link_to_add_association "曲名を追加", f, :musics, class: "btn btn-success", 
   'data-association-insertion-node' => '#music', 
   'data-association-insertion-method' => 'append' %>
 	    <%= link_to_remove_association '枚数を削除', f, class: 'btn btn-info' %>
+	    	<h4>曲名　　　　　　順番</h4>
+
 	    	<%= f.fields_for :musics do |mf| %>
         		<%= render partial: "music_fields", locals: {f: mf } %>
     		<% end %>
