--- a/app/views/products/_music_fields.html.erb
+++ b/app/views/products/_music_fields.html.erb
@@ -1,5 +1,4 @@
-<div class="nested-fields" style="border: 2px solid #F00;">
-	<h4>曲名　　　　　　順番</h4>
+<div class="nested-fields" >
 	<%= f.text_field :name %>
 	<%= f.text_field :truck_number %>
 	<%= link_to_remove_association '曲名を削除', f, class: 'btn btn-default' %>
