--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -83,8 +83,8 @@
 		padding: 15px 0px;
 		margin-top: 0px;
 		border-bottom: solid 0.8px lightgray;
-		background-color: #000;
-		color: yellow;
+		background-color: #F6C03F;
+		color: #fff;
 		font-weight: 700;
 	}
 }
