--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -171,7 +171,8 @@
 .total-price-text{
 	font-size: 18px;
 	font-weight: bold;
-	padding-top: 6px;
+	padding-top: 35px;
+	padding-bottom: 35px;
 	float: left;
 }
 
@@ -180,6 +181,8 @@
 	font-weight: bold;
 	color: #BC0303;
 	padding-left: 30px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 	float: left;
 
 	span {
