--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,18 @@
+
+<% if @product.artist == current_artist %>
+
 <p>編集フォーム</p>
 <%= current_artist.name %>
 <%= form_for(@product, :url => {:action => 'update'}) do |f| %>
 	<%= render partial: "form", locals: {f: f } %>
+<% end %>
+
+<% elsif admin_signed_in? %>
+
+<p>管理者用編集フォーム</p>
+<%= form_for(@product, :url => {:action => 'update'}) do |f| %>
+	<%= render partial: "form", locals: {f: f } %>
+<% end %>
+
+<% else %>
 <% end %>
