--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
             <!-- logo -->
             <div class="nav-logo">
               <li>
-              <i class="fas fa-headphones faa-bounce animated fa-3x fa-fw" id="r"></i><%= link_to products_path do %><%= image_tag 'DIGRU_logo', :size =>'150x50' %><% end %>
+              <i class="fas fa-headphones faa-bounce animated fa-3x fa-fw" id="r"></i><%= link_to products_path do %><%= image_tag 'DIGRU_logo.png', :size =>'150x50' %><% end %>
               </li>
             </div>
             <!-- /logo -->
