--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -83,8 +83,8 @@
 		padding: 15px 0px;
 		margin-top: 0px;
 		border-bottom: solid 0.8px lightgray;
-		background-color: #F6C03F;
-		color: #fff;
+		background-color: #000;
+		color: yellow;
 		font-weight: 700;
 	}
 }
@@ -188,7 +188,7 @@
 	line-height: 30px;
 	font-size: 10px;
 	color: white;
-	margin: 0 20px 40px 0px;
+	margin: 20px 20px 20px 0px;
 	padding-left: 20px;
 	background-color: black;
 	border-radius: 20px;
@@ -216,13 +216,17 @@
 .product-information-text {
 	float: left;
 	padding-left: 30px;
-	width: 60%;
 }
 
 .product-show-movie {
 	width: 80%;
 	margin: 0 auto;
-	padding-bottom: 30px;
+}
+
+.product-detailed-information {
+	width: 100%;
+	margin-left: 20px;
+	margin-top: -20px;
 }
 
 .show-sidebar {
@@ -236,15 +240,3 @@
 	background-color: orange;
 }
 
-.product-sidebar-sold-out {
-	list-style: none;
-	text-align: center;
-	font-size: 20px;
-	padding-top: 30px;
-}
-
-.product-show-button {
-	width: 50%;
-	margin: 30px auto;
-	padding-top: 30px;
-}
