--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,25 +16,13 @@
 					<%= attachment_image_tag @product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "product-item-image" %>
 				</div>
 				<div class="product-information-text">
-					<table class= "table">
-					    <tr>
-					        <th>シングル/アルバム名</th>
-					        <td><%= @product.name%></td>
-					    </tr>
-					    <tr>
-					        <th>アーティスト名</th>
-					        <td><%= @product.artist.name%></td>
-					    </tr>
-					    <tr>
-					        <th>ジャンル</th>
-					        <td><%= @product.genre%></td>
-					    </tr>
-					    <tr>
-					        <th>レーベル</th>
-					        <td><%= @product.label%></td>
-					    </tr>
-					</table>
+					<p>商品情報：</p>
 
+					<p><%= @product.name%> </p>
+					<p>/<%= @product.artist.name%></p>
+
+					<p>ジャンル：<%= @product.genre%></p>
+					<p>レーベル：<%= @product.label%></p>
 					<% if @product.stock > 0 %>
 						<p>在庫数：<%= @product.stock%></p>
 					<% else %>
@@ -45,12 +33,12 @@
 					<% if user_signed_in? %>
 						<% if !@product.favorited_by?(current_user) %>
 						    <%= link_to product_favorites_path(@product), method: :post do %>
-		    	 				<i class="fas fa-heart fa-fw" style="color: #FF0040;"></i>
+		    	 				<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
 		    	 			 	お気に入りに入れる
 		 					<% end %>
 						<% else %>
 						    <%= link_to product_favorites_path(@product), method: :delete do %>
-					    		<i class="fas fa-heart"" aria-hidden="true" style="color: #5858FA;"></i>
+					    		<i class="fa fa-heart-o"" aria-hidden="true"></i>
 					    	  	お気に入りから外す
 						    <% end %>
 						<% end %>
@@ -74,52 +62,29 @@
 
 			<!-- 商品の詳細情報 -->
 			<div class="border" aria-hidden="true""> <span class="glyphicon glyphicon-headphones"> CD詳細情報</span></div>
-			<table class="product-detailed-information">
-				<thead>
-					<tr>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<% @product.disc_numbers.each do |disc_number| %>
-						<p>Disc:<%= disc_number.disc_name %></p>
-					</tr>
-				</tbody>
-
-				<thead>
-					<tr>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="backgrund-color:<%= cycle('#FFffFF','#FFff99') %>">
-						<% disc_number.musics.each do |music| %>
-						<p><%= music.truck_number %>. <%= music.name %></p>
-						<% end %>
-					</tr>
-				</tbody>
-				<% end %>
-			</table>
-
+			<div class="product-detailed-information">
+					<% @product.disc_numbers.each do |disc_number| %>
+						<br><p><strong>Disc:<%= disc_number.disc_name %></strong></p>
+							<% disc_number.musics.each do |music| %>
+								<ul><%= music.truck_number %>. <%= music.name %></ul>
+							<% end %>
+					<% end %>
+			</div>
 			<!-- 商品の詳細情報 -->
 
 			<!-- 商品へのコメント -->
 			<div class="border"><span class="glyphicon glyphicon-comment"> コメント</span></div>
 			<div class="comment">
 				    <% @product.comments.each do |comment| %>
-				    	<% if comment.user.hundle_name.nil? %>
-				    	<p>名前：名無しのユーザー
-				    	<% else %>
 				    	<p>名前：<%= comment.user.hundle_name %>
-				    	<% end %>
-				    	 / 投稿日時：<%= comment.created_at.strftime('%Y/%m/%d') %></p>
+				    	 / 投稿日時：<%= comment.created_at.strftime('%Y/%m/%d') %><p>
 					    <p>コメント：<%= comment.comment_text %>
-				         <%= link_to "削除", product_comments_path(@product.id), method: :delete %></p>
+				         <%= link_to "削除", product_comments_path(@product.id), method: :delete %><p>
 				    <% end %>
 			</div>
 			<!-- 商品へのコメント -->
 			<!-- コメント投稿用フォーム -->
             <% if user_signed_in? %>
-            <br>
 			<%= form_for [@product, @comment] do |f| %>
 	            <%= f.text_area :comment_text, rows:'5', class: "form-control", placeholder: "コメントをここに" %>
 	    		<%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
@@ -127,7 +92,6 @@
     		<% end %>
 			<!-- コメント投稿用フォーム -->
 		</div>
-		<!-- sidebar  -->
 		<div class="col-xs-4">
 			<div class="show-sidebar">
 				<% if @cart_item.errors %>
@@ -135,34 +99,25 @@
 						<%= e %>
 					<% end %>
 				<% end %>
-
 				<% if user_signed_in? %>
-
-			    	<%= form_for @cart_item do |f| %>
-			    		<%= f.hidden_field :product_id, value: @product.id %>
-			    		<%= f.hidden_field :price, value: @product.price %>
-			    		<% if @product.stock > 0 %>
-			    			<p>数量: <%= f.number_field :quantity, value: @cart_item.quantity.to_i, min: 1, max: @product.stock %></p>
-			    			<p><%= f.submit "カートに入れる", class: "btn btn-primary" %></p>
-			    		<% else %>
-			    			<li  class="product-sidebar-sold-out"> ❌ 現在品切れ中です．</p>
-			    		<% end %>
-			    	<% end %>
-
+		    	<%= form_for @cart_item do |f| %>
+		    		<%= f.hidden_field :product_id, value: @product.id %>
+		    		<%= f.hidden_field :price, value: @product.price %>
+		    		<% if @product.stock > 0 %>
+		    			<p>数量: <%= f.number_field :quantity, value: @cart_item.quantity.to_i, min: 1, max: @product.stock %></p>
+		    			<p><%= f.submit "カートに入れる", class: "btn btn-primary" %></p>
+		    		<% else %>
+		    			<p> ❌ 現在品切れ中です．</p>
+		    		<% end %>
+		    	<% end %>
 		    	<% elsif artist_signed_in? && @product.artist_id == current_artist.id %>
-
-			    	<p class="product-show-button"><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-primary" %></p>
-			    	<p class="product-show-button"><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-danger", method: :delete, "data-confirm" => "Are you sure?" %></p>
-
+			    	<p><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-default" %></p>
+			    	<p><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-default", method: :delete, "data-confirm" => "Are you sure?" %></p>
 			    <% elsif admin_signed_in? %>
-
-			    	<p class="product-show-button"><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-primary" %></p>
-			    	<div></div>
-			    	<p class="product-show-button"><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-danger", method: :delete, "data-confirm" => "Are you sure?" %></p>
-
+			    	<p><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-default" %></p>
+			    	<p><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-default", method: :delete, "data-confirm" => "Are you sure?" %></p>
 		    	<% end %>
 		    </div>
 		</div>
-		<!-- sidebar -->
 	</div>
 </div>
