--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -63,7 +63,7 @@
 	width: 48%;
 	height: 500px;
 	margin-right:10px;
-	background-image: url("user.jpg");
+	background-image: url("images/user.jpg");
 	background-size: cover;
 }
 
@@ -91,7 +91,7 @@
 	width: 48%;
 	height: 500px;
 	margin-left:10px;
-	background-image: url("artist.jpg");
+	background-image: url("images/artist.jpg");
 	background-size: cover;
 }
 
