--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,12 +33,12 @@
 					<% if user_signed_in? %>
 						<% if !@product.favorited_by?(current_user) %>
 						    <%= link_to product_favorites_path(@product), method: :post do %>
-		    	 				<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+		    	 				<i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
 		    	 			 	お気に入りに入れる
 		 					<% end %>
 						<% else %>
 						    <%= link_to product_favorites_path(@product), method: :delete do %>
-					    		<i class="fa fa-heart-o"" aria-hidden="true"></i>
+					    		<i class="fas fa-heart aria-hidden="true"></i>
 					    	  	お気に入りから外す
 						    <% end %>
 						<% end %>
@@ -74,12 +74,21 @@
 
 			<!-- 商品へのコメント -->
 			<div class="border"><span class="glyphicon glyphicon-comment"> コメント</span></div>
-			<div class="comment">
+			<div class="balloon5">
 				    <% @product.comments.each do |comment| %>
+				    <%= attachment_image_tag comment.user, :profile_image, size: "50x50" , format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+				    	<div class="chatting">
+    						<div class="says"><b>
+				    	<% if comment.user.hundle_name.nil? %>
+				    	<p>名前：名無しのユーザー
+				    	<% else %>
 				    	<p>名前：<%= comment.user.hundle_name %>
-				    	 / 投稿日時：<%= comment.created_at.strftime('%Y/%m/%d') %><p>
-					    <p>コメント：<%= comment.comment_text %>
-				         <%= link_to "削除", product_comments_path(@product.id), method: :delete %><p>
+				    	<% end %>
+				    	 / 投稿日時：<%= comment.created_at.strftime('%Y/%m/%d') %></p></b>
+  							  	<p><%= comment.comment_text %></p>
+						    </div>
+						    <%= link_to "削除", product_comments_path(@product.id), method: :delete %>
+						</div>
 				    <% end %>
 			</div>
 			<!-- 商品へのコメント -->
