--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -240,3 +240,16 @@
 	background-color: orange;
 }
 
+.quantity-button {
+	padding-left: 100px;
+	padding-top: 50px;
+}
+
+.p-cart-button {
+	padding-left: 100px;
+}
+
+.cart-button {
+	width: 60%;
+}
+
