--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -113,8 +113,8 @@
 		    		<%= f.hidden_field :product_id, value: @product.id %>
 		    		<%= f.hidden_field :price, value: @product.price %>
 		    		<% if @product.stock > 0 %>
-		    			<p>数量: <%= f.number_field :quantity, value: @cart_item.quantity.to_i, min: 1, max: @product.stock %></p>
-		    			<p><%= f.submit "カートに入れる", class: "btn btn-primary" %></p>
+		    			<p class= "quantity-button">数量: <%= f.number_field :quantity, value: @cart_item.quantity.to_i, min: 1, max: @product.stock %></p>
+		    			<p class= "p-cart-button"><%= f.submit "カートに入れる", class: "btn btn-lg btn-primary cart-button" %></p>
 		    		<% else %>
 		    			<p> ❌ 現在品切れ中です．</p>
 		    		<% end %>
