--- a/app/views/users/session_select.html.erb
+++ b/app/views/users/session_select.html.erb
@@ -1,5 +1,5 @@
 <h3 class="select-text">どちらか選択してください</h3>
-<h5 class="select-text">※会員登録される方は<%= link_to new_user_session_path do %>こちら<% end %>から</h5>
+<h5 class="select-text">※会員登録される方は<%= link_to "registration_select" do %>こちら<% end %>から</h5>
 <div class="select-box">
 	<%= link_to new_user_session_path, class: "" do %>
 		<div class= "select_user_login">
