--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -58,7 +58,7 @@
 	padding-top: 50px;
 }
 
-.select_user_login {
+.select-user-login {
 	float: left;
 	width: 48%;
 	height: 500px;
@@ -86,7 +86,7 @@
 	text-align: center;
 }
 
-.select_artist_login {
+.select-artist-login {
 	float: left;
 	width: 48%;
 	height: 500px;
