--- a/app/views/users/session_select.html.erb
+++ b/app/views/users/session_select.html.erb
@@ -2,7 +2,7 @@
 <h5 class="select-text">※会員登録される方は<%= link_to new_user_session_path do %>こちら<% end %>から</h5>
 <div class="select-box">
 	<%= link_to new_user_session_path, class: "" do %>
-		<div class= "select_user_login">
+		<div class= "select-user-login">
 			<div class="user-white-image">
 				<li>一般の方はこちら</li>
 			</div>
@@ -10,7 +10,7 @@
 	<% end %>
 
 	<%= link_to new_artist_session_path, class: "" do %>
-		<div class= "select_artist_login">
+		<div class= "select-artist-login">
 			<div class="bg-artist-image">
 				<div class="artist-white-image">
 					<li>アーティストの方はこちら</li>
