--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -216,6 +216,22 @@
 .product-information-text {
 	float: left;
 	padding-left: 30px;
+	width: 60%;
+}
+
+.product-show-table {
+}
+
+.product-show-button1 {
+	width: 60%;
+	margin-left: 70px;
+	padding-top: 20px;
+}
+
+.product-show-button2 {
+	width: 60%;
+	margin-left: 70px;
+	padding-top: 20px;
 }
 
 .product-show-movie {
