--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,13 +16,27 @@
 					<%= attachment_image_tag @product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "product-item-image" %>
 				</div>
 				<div class="product-information-text">
-					<p>商品情報：</p>
+					<div class="product-show-table">
+						<table class= "table">
+						    <tr>
+						      <th>シングル/アルバム名</th>
+						      <td><%= @product.name%></td>
+						    </tr>
+						    <tr>
+						      <th>アーティスト</th>
+						      <td><%= @product.artist.name%></td>
+						    </tr>
+						    <tr>
+						      <th>ジャンル</th>
+						      <td><%= @product.genre%></td>
+						    </tr>
+						    <tr>
+						      <th>レーベル</th>
+						      <td><%= @product.label%></td>
+						    </tr>
+						</table>
+					</div>
 
-					<p><%= @product.name%> </p>
-					<p>/<%= @product.artist.name%></p>
-
-					<p>ジャンル：<%= @product.genre%></p>
-					<p>レーベル：<%= @product.label%></p>
 					<% if @product.stock > 0 %>
 						<p>在庫数：<%= @product.stock%></p>
 					<% else %>
@@ -109,22 +123,22 @@
 					<% end %>
 				<% end %>
 				<% if user_signed_in? %>
-		    	<%= form_for @cart_item do |f| %>
-		    		<%= f.hidden_field :product_id, value: @product.id %>
-		    		<%= f.hidden_field :price, value: @product.price %>
-		    		<% if @product.stock > 0 %>
-		    			<p class= "quantity-button">数量: <%= f.number_field :quantity, value: @cart_item.quantity.to_i, min: 1, max: @product.stock %></p>
-		    			<p class= "p-cart-button"><%= f.submit "カートに入れる", class: "btn btn-lg btn-primary cart-button" %></p>
-		    		<% else %>
-		    			<p> ❌ 現在品切れ中です．</p>
-		    		<% end %>
-		    	<% end %>
+			    	<%= form_for @cart_item do |f| %>
+			    		<%= f.hidden_field :product_id, value: @product.id %>
+			    		<%= f.hidden_field :price, value: @product.price %>
+			    		<% if @product.stock > 0 %>
+			    			<p class= "quantity-button">数量: <%= f.number_field :quantity, value: @cart_item.quantity.to_i, min: 1, max: @product.stock %></p>
+			    			<p class= "p-cart-button"><%= f.submit "カートに入れる", class: "btn btn-lg btn-primary cart-button" %></p>
+			    		<% else %>
+			    			<p> ❌ 現在品切れ中です．</p>
+			    		<% end %>
+			    	<% end %>
 		    	<% elsif artist_signed_in? && @product.artist_id == current_artist.id %>
-			    	<p><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-default" %></p>
-			    	<p><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-default", method: :delete, "data-confirm" => "Are you sure?" %></p>
+			    	<p class="product-show-button1"><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-primary" %></p>
+			    	<p class="product-show-button2"><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-danger", method: :delete, "data-confirm" => "Are you sure?" %></p>
 			    <% elsif admin_signed_in? %>
-			    	<p><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-default" %></p>
-			    	<p><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-default", method: :delete, "data-confirm" => "Are you sure?" %></p>
+			    	<p class="product-show-button1"><%= link_to "商品情報編集", edit_product_path(@product), class: "col-xs-12 btn btn-primary" %></p>
+			    	<p class="product-show-button2"><%= link_to "商品削除", product_path(@product), class: "col-xs-12 btn btn-danger", method: :delete, "data-confirm" => "Are you sure?" %></p>
 		    	<% end %>
 		    </div>
 		</div>
